Add support for custom thickness and edge scale factors

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,6 @@ allprojects {
         mavenLocal()
     }
 
-    group = 'me.oriley.vista'
+    group = 'com.github.oriley-me.vista'
     version = 'LOCAL-SNAPSHOT'
 }
